<resources>
    <string name="app_name" translatable="false">ShopDrop</string>
    <string name="base_url" translatable="false">https://shopdrop.ca/</string>
    <string name="header" translatable="false">c9f7f8f114089b7c0b4f396913cad6</string>
    <string name="facebook_app_id" translatable="false">1960029430949204</string>
    <string name="no_location_data_provided">No Location Provider</string>
    <string name="set_as_delivery_location">Set as Delivery location</string>
    <string name="your_location">Your Location</string>
    <string-array name="gender">
        <item>Please Select Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Not specified</item>
    </string-array>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">search</string>
    <string name="action_notification">notification</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Category</item>
        <item>Profile</item>
        <item>Address Book</item>
        <item>My Orders</item>
        <item>My WishList</item>
        <item>My Downloads</item>
        <item>My Stores</item>
        <item>More..</item>
        <item>Contact Us</item>

    </string-array>
    <string name="addtocart">Add to cart</string>
    <string name="MyWishList">My WishList</string>
    <string name="Company">More..</string>
    <string name="Home">Home</string>
    <string name="Category">Category</string>
    <string name="Profile">Profile</string>
    <string name="AddressBook">Address Book</string>
    <string name="MyOrders">My Orders</string>
    <string name="MyStores">My Stores</string>
    <string name="ContactUs">Contact Us</string>
    <string name="MyDownloads">My Downloads</string>
    <string name="title_activity_product_listing">ProductListing</string>
    <string name="title_activity_product_view_page">ProductViewPage</string>
    <string name="title_activity_product_view_fagment">ProductViewFagment</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_show_image">ShowImage</string>
    <string name="title_activity_wish_listing">WishListing</string>
    <string name="title_activity_cart_listing">CartListing</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="SignIn">Sign in</string>
    <string name="action_cart">cart</string>
    <string name="cmspage">CMS pages</string>
    <string name="title_activity_sub_category_listing">SubCategoryListing</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="Username">UserName</string>
    <string name="Password">Password</string>
    <string name="ForgotPassword">Forgot Password?</string>
    <string name="Registration">Register Here</string>
    <string name="Register">Registration</string>
    <string name="Required">*:Required</string>
    <string name="FirstName">First Name*</string>
    <string name="Email">Email*</string>
    <string name="Write_a_Review">Write a Review</string>
    <string name="howdoyourate">How do you rate this product ?</string>
    <string name="Pass">Password*</string>
    <string name="allcategories">ALL Categories</string>
    <string name="ConfirmPassword">Confirm Password*</string>
    <string name="reg">Register</string>
    <string name="LastName">Last Name*</string>
    <string name="SignOut">Logout</string>
    <string name="Send">Send</string>
    <string name="CreateAccount">Create Account</string>
    <string name="update">Update</string>
    <string name="MyAddresses">My Address Book</string>
    <string name="AddAddress">Add An Address</string>
    <string name="Pincode">Postcode*</string>
    <string name="Address">Address</string>
    <string name="Street">Street*</string>
    <string name="City">City*</string>
    <string name="State">State*</string>
    <string name="Country">Country*</string>
    <string name="Save">Save</string>
    <string name="PhoneNumber">Phone Number*</string>
    <string name="MyOrder">My Orders</string>
    <string name="AddAddressOutput">You have not added an Address to your Address book</string>
    <string name="Noordderplaced">You have Placed no Orders</string>
    <string name="profile">Profile</string>
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="AddReview">Write a Review</string>
    <string name="GeneratePass">Generate Your New Password</string>
    <string name="title_activity_testingtabs">Testingtabs</string>
    <string name="title_activity_my_downloadable_products">MyDownloadableProducts</string>
    <string name="title_activity_product_description">ProductDescription</string>
    <string name="title_activity_load_webdescription">LoadWebdescription</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tabsact">Tabsact</string>
    <string name="confirm_first">Are You Sure You Want To  Delete This ?</string>
    <string name="confirm_alldelete">Are You Sure You Want To delete all items existing in cart ?</string>
    <string name="confirm_allwishdelete">Are You Sure You Want To delete all items existing in wishlist ? <br /> You can also delete 1 item just by swiping left to that item.</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="qty">Qty : </string>
    <string name="price">Price :</string>
    <string name="subtotal"> Subtotal : </string>
    <string name="title_activity_maps">Map</string>
    <string name="shareurl">http://viewShareProduct.com/</string>
    <string name="networkissue">Please Try After Some Time</string>
    <string name="url_not_found">PLease Try After Sometime</string>
    <string name="lownetwork">Low Network connection is detected</string>
    <string name="title_activity_no_module">NoModule</string>
    <string name="Checkout_Address">Checkout_Address</string>
    <string name="Action">Action</string>
    <string name="empty">Please Enter Some Value</string>
    <string name="downloadableproductsincart">Please Login/Register first as you are having downloadable products in your cart</string>
    <string name="itemcounttext">Items In Your Cart</string>
    <string name="suntotal">Sub total:</string>
    <string name="shippingamount">ShippingAmount:</string>
    <string name="ProceedTocheckout">Proceed To checkout</string>
    <string name="YourOrderHasBeenPlacedSuccessfully">Your Order Has Been Placed Successfully</string>
    <string name="continueshopping"><![CDATA[Continue Shopping ]]></string>
    <string name="orderquantity">Ordered Quantity :</string>
    <string name="Proceed_as_Guest">Proceed as Guest</string>
    <string name="Proceed_as_User">Proceed as User</string>
    <string name="Email_Hint">Enter your email here..</string>
    <string name="Login_as_User">Login as User</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="select_method_for_shipping">Select Shipping Method</string>
    <string name="continuee">Continue</string>
    <string name="Choose_Address_from_addressbook">Choose Address from addressbook</string>
    <string name="Price">Price</string>
    <string name="filter">Filters</string>
    <string name="ForgotPass">Generate New Password</string>
    <string name="Viewall">View All</string>
    <string name="shipto">SHIP TO</string>
    <string name="orderid">Order Id:</string>
    <string name="cost">COST :</string>
    <string name="Amount">Amount : </string>
    <string name="orderdate">ORDER DATE</string>
    <string name="Shipping_Address">Shipping Address</string>
    <string name="shippingmethod">SHIPPING METHOD:</string>
    <string name="paymentmethod">PAYMENT METHOD:</string>
    <string name="subtotalatorder">SUBTOTAL:</string>
    <string name="taxprice">Tax Price :</string>
    <string name="shipping">Shipping :</string>
    <string name="discount">Discount :</string>
    <string name="grandtotal">Grand Total:</string>
    <string name="clearfilter">Clear Filter</string>
    <string name="New_Price">New Price :</string>
    <string name="STOCK">STOCK :</string>
    <string name="Quantity">Quantity: </string>
    <string name="Description">Description</string>
    <string name="Details">Details</string>
    <string name="ATC">Add to Cart</string>
    <string name="New_Password">New Password</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="ShowPass">Show Password</string>
    <string name="sortby">SortBy</string>
    <string name="sortbycat">Category</string>
    <string name="Featured_Products">Featured Products</string>
    <string name="areyousure">Are You Sure You Want To Delete This??</string>
    <string name="MostViewed_Products">Most Viewed</string>
    <string name="BestSellers">Best Sellers</string>
    <string name="New_Arrivals">New Arrivals</string>
    <string name="PLACE_ORDER">PLACE ORDER</string>
    <string name="invalidemail">Invalid email</string>
    <string name="succesfullLogin">Login Successful</string>
    <string name="invalidLogin">Invalid Login Details</string>
    <string name="adding">Adding...</string>
    <string name="minimum_8_character">Minimum 8 character Required</string>
    <string name="confirmnotmatch">Confirm Password and Password do not match</string>
    <string name="SearchYourProducts">Search Your Products</string>
    <string name="your_order_id">Your Order Id is</string>
    <string name="orderplacesuccess">Your order has been placed successfully </string>
    <string name="pleaseTryagain">Please Try Again</string>
    <string name="title_activity_un_authourized_request_error">UnAuthourizedRequestError</string>
    <string name="saved">saved</string>
    <string name="title_activity_no_internetconnection">NoInternetconnection</string>
    <string name="enteremail">Please Enter Your Email</string>
    <string name="submit">Submit</string>
    <string name="loginfirst">Please Login first to view this Section</string>
    <string name="loginfirsttocompare">Please Login first to compare your products</string>
    <string name="itemtodownload">Items To Download</string>
    <string name="youhave">You Have</string>
    <string name="inwishlist">In WishList</string>
    <string name="loginfirsttoaddwish">Please Login First to add this item to wishlist</string>
    <string name="addtowishlist"> Wishlist</string>
    <string name="review">reviews</string>
    <string name="offer">offer</string>
    <string name="percent">% off</string>
    <string name="shareproduct">Share Product</string>
    <string name="similar">Similar Products</string>
    <string name="options">Choose Options</string>
    <string name="browse">Browse</string>
    <string name="searchvendors">Search  Vendors</string>
    <string name="Countrysearch">Country</string>
    <string name="statesearch">State</string>
    <string name="zipsearch">Zip/PostalCode</string>
    <string name="vendornamesearch">Vendor Name</string>
    <string name="citysearch">City</string>
    <string name="file">#FILE</string>
    <string name="nofileselected">No File Selected</string>
    <string name="allowfiletype">Allowed file type:</string>
    <string name="png">Png</string>
    <string name="maxwidth">Maximum Image Width :</string>
    <string name="maxheight">Maximum Image Height :</string>
    <string name="wishlist">Wishlist</string>
    <string name="home">Home</string>
    <string name="pleaseEnterTheOtp">Enter the OTP sent to</string>
    <string name="verifyOtp">Verify OTP</string>
    <string name="regenerateOtp">Re-generate OTP</string>
    <string name="cart">Cart</string>
    <string name="acc">Account</string>
</resources>