<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright/**
  ~          * CedCommerce
  ~           *
  ~           * NOTICE OF LICENSE
  ~           *
  ~           * This source file is subject to the End User License Agreement (EULA)
  ~           * that is bundled with this package in the file LICENSE.txt.
  ~           * It is also available through the world-wide-web at this URL:
  ~           * http://cedcommerce.com/license-agreement.txt
  ~           *
  ~           * @category  Ced
  ~           * @package   MageNative
  ~           * @author    CedCommerce Core Team <connect@cedcommerce.com >
  ~           * @copyright Copyright CEDCOMMERCE (http://cedcommerce.com/)
  ~           * @license      http://cedcommerce.com/license-agreement.txt
  ~           */
  -->

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_margin="15dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/MageNative_typecustomoption"
        android:visibility="gone"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:id="@+id/MageNative_filetittle"

            android:layout_margin="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/MageNative_images"
                android:text="@string/nofileselected"
                android:textSize="15sp"
                android:textColor="@color/black"

                android:layout_margin="5dp"
                />
            <Button
                android:id="@+id/MageNative_browse"
                android:text="@string/browse"
                android:textColor="#FFFFFF"
                android:textSize="11sp"
                android:layout_width="70dp"
                android:layout_height="27dp"
                android:background="@drawable/button_shape"
                android:shadowColor="#112FA8"
                android:shadowDx="20"
                android:shadowDy="20"
                android:shadowRadius="25"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="30dp"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allowfiletype"
            android:textColor="@color/black"
            android:textSize="13sp"

            android:layout_margin="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/png"
            android:id="@+id/MageNative_allowedfiletype"
            android:textColor="@color/black"
            android:textSize="13sp"

            android:layout_margin="5dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maxwidth"
                android:textColor="@color/black"
                android:textSize="13sp"

                android:layout_margin="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/MageNative_maxwidth"
                android:textColor="@color/black"
                android:textSize="13sp"

                android:layout_margin="5dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maxheight"
                android:textColor="@color/black"
                android:textSize="13sp"

                android:layout_margin="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/MageNative_maxheight"
                android:textColor="@color/black"
                android:textSize="13sp"

                android:layout_margin="5dp"/>
        </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:textColor="@color/txtapptheme_color"
        android:background="@color/AppTheme"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/MageNative_optionid"
        android:visibility="gone"
        />

</LinearLayout>