<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright/**
  ~          * CedCommerce
  ~           *
  ~           * NOTICE OF LICENSE
  ~           *
  ~           * This source file is subject to the End User License Agreement (EULA)
  ~           * that is bundled with this package in the file LICENSE.txt.
  ~           * It is also available through the world-wide-web at this URL:
  ~           * http://cedcommerce.com/license-agreement.txt
  ~           *
  ~           * @category  Ced
  ~           * @package   MageNative
  ~           * @author    CedCommerce Core Team <connect@cedcommerce.com >
  ~           * @copyright Copyright CEDCOMMERCE (http://cedcommerce.com/)
  ~           * @license      http://cedcommerce.com/license-agreement.txt
  ~           */
  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:id="@+id/forgot_pass_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_sheet_bg"
        app:behavior_hideable="true"
        app:behavior_peekHeight="0dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/MageNative_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:gravity="center"
                android:fontFamily="@font/celias_bold"
                android:text="@string/ForgotPass"
                android:textSize="18sp"

                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/celias_regular"
                android:padding="4dp"
                android:text="@string/Email_Hint" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/LoginTextInputLayoutStyle"
app:hintTextColor="@color/user_icon_default_gray"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:backgroundTint="@color/black"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/MageNative_getEmail"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/celias_regular"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/mail_box"
                    android:drawablePadding="@dimen/pad_10dp"
                    android:hint="@string/Email"
                    android:padding="15dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/MageNative_Send"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/celias_bold"
                android:layout_gravity="center"
                android:background="@drawable/buttonbackground"
                android:textColor="@color/txtapptheme_color"
                android:text="@string/Send"/>
        </LinearLayout>

    </RelativeLayout>

</layout>
